BuddyPress/bbPress: Base theme & Trac stylings
* Increase size of code/diff fonts
* Improve layout of roadmap, milenstone, and changeset pages
* Improve diff style switcher
* Improve small screen support (overflow, etc...)
* Move more common styling into variables

See: https://buddypress.trac.wordpress.org/ticket/9262

git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14359 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/buddypress.org/public_html/wp-content/themes/bb-base/style-trac.css
+++ b/buddypress.org/public_html/wp-content/themes/bb-base/style-trac.css
@@ -1,6 +1,29 @@
 /* =Trac
 -------------------------------------------------------------- */
 
+:root {
+
+	/* Admin Bar */
+	--bbbase-admin-bar-text-color: #c3c4c7;
+	--bbbase-admin-bar-background-color: #1d2327;
+	--bbbase-admin-bar-item-hover-color: #72aee6;
+	--bbbase-admin-bar-item-hover-background-color: #2c3338;
+
+	/* Commonly Used Trac Colors */
+	--bbbase-diff-loc-background-color: #eee;
+	--bbbase-code-background-color: #f0f0f0;
+	--bbbase-light-header-background-color: #fafafa;
+	--bbbase-prefs-hover-color: #21759b;
+
+	/* Wrappers */
+	--bbbase-wrapper-border: 1px solid #ccc;
+	--bbbase-wrapper-background-color: #eee;
+
+	/* Messages */
+	--bbbase-message-border: 1px solid #aa0;
+	--bbbase-message-background-color: #ffe;
+}
+
 /* Global */
 body.trac {
 	min-width: 0;
@@ -41,10 +64,10 @@ body.trac label {
 body.trac input[type=text],
 body.trac input.textwidget,
 body.trac textarea {
-	font: 14px/16px sans-serif;
+	font: var(--bbbase-font-input);
 	padding: 8px 10px;
-	color: #333;
-	border: 1px solid #ccc;
+	color: var(--bbbase-darkest-text-color-low-contrast);
+	border: var(--bbbase-wrapper-border);
 }
 
 body.trac input[type=text],
@@ -89,7 +112,7 @@ body.trac .buttons input {
 
 body.trac table.listing thead th {
 	font-size: 14px;
-	background: #eee;
+	background: var(--bbbase-wrapper-background-color);
 	border: none;
 	padding: 8px 10px;
 	margin: 0;
@@ -97,21 +120,21 @@ body.trac table.listing thead th {
 
 body.trac table.listing tbody td {
 	font-size: 14px;
-	background: #fff;
+	background: var(--bbbase-brightest-white);
 	border: none;
 	padding: 8px 10px;
 	margin: 0;
 }
 
 body.trac table.listing code {
-	background-color: #f0f0f0;
+	background-color: var(--bbbase-);
 }
 
 /* Subnav - Adminbar */
 body.trac #subnav {
 	border: none;
 	direction: ltr;
-	color: #c3c4c7;
+	color: var(--bbbase-admin-bar-text-color);
 	font-size: 13px;
 	font-weight: 400;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
@@ -122,7 +145,7 @@ body.trac #subnav {
 	left: 0;
 	width: 100%;
 	z-index: 99999;
-	background: #1d2327;
+	background: var(--bbbase-admin-bar-background-color);
 	/* Only visible in Windows High Contrast mode */
 	outline: 1px solid transparent;
 }
@@ -220,17 +243,17 @@ body.trac #subnav-inner ul li {
 }
 body.trac #subnav-inner ul li a {
 	text-decoration: none;
-	color: #555;
+	color: #555; /* Not variable */
 }
 
 body.trac #subnav-inner ul li:hover a,
 body.trac #subnav-inner ul li:hover a:focus {
-    background: #2c3338;
-    color: #72aee6;
+    background: var(--bbbase-admin-bar-item-hover-background-color);
+    color: var(--bbbase-admin-bar-item-hover-color);
 }
 
 body.trac #subnav #nav-user:before {
-	font: normal 20px/1 'dashicons';
+	font: var(--bbbase-font-dashicons);
 	color: rgba(240, 246, 252, .6); /* Not variable */
 	content: '\f120';
 	float: left;
@@ -245,7 +268,7 @@ body.trac #subnav #nav-user {
 }
 
 body.trac #subnav #nav-user a {
-	color: #f0f0f1;
+	color: var(--bbbase-code-background-color);
 }
 
 body.trac #subnav #nav-user li.first:has(.trac-author-user) {
@@ -253,7 +276,7 @@ body.trac #subnav #nav-user li.first:has(.trac-author-user) {
 }
 
 body.trac #subnav #nav-user span.trac-author-user {
-	color: #72aee6;
+	color: var(--bbbase-admin-bar-item-hover-color);
 }
 
 /* Wrappers */
@@ -285,7 +308,7 @@ body.trac #ctxtnav ul li {
 	height: 100%;
 	padding: 0;
 	margin: 0;
-	font: 100 16px/1.5 Inter, sans-serif;
+	font: var(--bbbase-font-base);
 }
 
 /* Banner & Search */
@@ -334,16 +357,17 @@ body.trac #mainnav ul li :link {
 	border-top-right-radius: 8px;
 }
 
-body.trac #mainnav li.active :link {
+body.trac #mainnav li.active :link,
+body.trac #mainnav li.active :visited {
 	margin-top: 2px;
-	background-color: #fff;
-	color: #000;
+	background-color: var(--bbbase-brightest-white);
+	color: var(--bbbase-darkest-black);
 	border: 1px solid var(--bbbase-grey-border-color-low-contrast) !important;
 	border-bottom-color: transparent !important;
 }
 
 body.trac #mainnav li:not(.active) :link:hover {
-	background-color: #fafafa;
+	background-color: var(--bbbase-light-header-background-color);
 	border: 1px solid rgba(0, 0, 0, 0.1) !important;
 	border-bottom: 1px solid transparent !important;
 }
@@ -487,6 +511,7 @@ body.trac #content {
 	display: flex;
 	flex-direction: column;
 	font-size: 16px;
+	overflow-x: auto;
 }
 
 body.trac #content h1 {
@@ -506,7 +531,7 @@ body.trac #content.roadmap .milestone .info h2 a {
 	margin: 0;
 	padding: 10px 15px;
 	border-radius: 0;
-	background-color: #eee;
+	background-color: var(--bbbase-wrapper-background-color);
 }
 
 body.trac #content.timeline dl {
@@ -524,7 +549,7 @@ body.trac #content.timeline dt a {
 }
 
 body.trac #content.timeline dt .time {
-    color: #999;
+    color: var(--bbbase-light-text-color-low-contrast);
     font-size: 16px;
 	width: 50px;
 	display: inline-block;
@@ -553,14 +578,29 @@ body.trac #content.prefs #tabcontent {
 }
 
 body.trac #content #prefs {
-	background: #eee;
+	background: var(--bbbase-wrapper-background-color);
 	border-radius: var(--bbbase-border-radius);
 	padding: 20px;
 	margin: 30px 0;
 	float: none;
 	font-size: 15px;
-	border: 1px solid #ccc;
+	border: var(--bbbase-wrapper-border);
 	order: 2;
+}
+
+body.trac #content #prefs input,
+body.trac #content #prefs select {
+	font: var(--bbbase-font-input);
+}
+
+body.trac #content #prefs .choice {
+	float: none;
+	margin: 0 0 30px 0;
+	border: none;
+}
+
+body.trac #content #prefs .buttons {
+	margin: 0;
 }
 
 body.trac #content #prefs + label:has(input[type=checkbox]),
@@ -576,7 +616,7 @@ body.trac #content #prefs + div:has(input[type=checkbox]) input[type=checkbox] {
 }
 
 body.trac #content #prefs label:hover {
-	color: #21759b;
+	color: var(--bbbase-prefs-hover-color);
 	cursor: pointer;
 }
 
@@ -592,7 +632,7 @@ body.trac #content #prefs select {
 
 body.trac #content #prefs fieldset {
 	border-radius: var(--bbbase-border-radius);
-	border: 1px solid #ccc;
+	border: var(--bbbase-wrapper-border);
 	padding: 10px 20px 20px 20px;
 	margin: 10px 0;
 }
@@ -614,52 +654,112 @@ body.trac .inlinebuttons input[type=submit] {
 }
 
 /* Roadmap */
-body.trac #content.roadmap .milestone {
-	margin: 0 0 30px 0;
+body.trac div.milestone {
+	margin: 0;
+	padding: 30px;
 }
 
-body.trac #content.roadmap .milestone .info h2 {
+body.trac .milestone .info h2 {
 	border: none;
 	background: none;
+	margin: -30px -30px 0 -30px;
 }
 
-body.trac #content.roadmap .milestone .info .date,
-body.trac #content.roadmap .milestone .info .percent,
-body.trac #content.roadmap .milestone .info .legend {
+body.trac .milestone .info .date,
+body.trac .milestone .info .percent,
+body.trac .milestone .info .legend {
     font-size: 16px;
     font-style: normal;
 }
-body.trac #content.roadmap .milestone .info .date {
-    color: #888;
+body.trac .milestone .info .date {
+    color: var(--bbbase-light-text-color-low-contrast);
 	font-weight: 600;
     margin: 0 20px 10px 20px;
 }
 
-body.trac #content.roadmap .milestone .info .percent,
-body.trac #content.roadmap .milestone .info .legend {
+body.trac .milestone .info .percent,
+body.trac .milestone .info .legend {
 	margin: 10px;
 }
 
-body.trac #content.roadmap .milestone .info .legend {
+body.trac .milestone .info .legend {
 	color: var(--bbbase-brightest-white);
 }
 
-body.trac #content.roadmap .milestone .info .legend span {
+body.trac .milestone .info .legend span {
 	margin: 0 0 0 10px;
 	text-transform: capitalize;
 }
 
-body.trac #content.roadmap .milestone .description {
-    margin: 0 20px;
+body.trac .milestone .description {
+    margin: 20px 0 0 0;
+}
+
+body.trac table.progress {
+	border: var(--bbbase-wrapper-border);
+	margin-right: 20px !important;
 }
 
 body.trac table.progress,
 body.trac .trac-groupprogress {
-	border: none;
     width: 50%;
     max-width: 50%;
-	margin: 0 15px;
-	background: var(--bbbase-light-background-color-low-contrast);
+	margin: 0 20px;
+}
+
+/* Milestone */
+body.trac #content.milestone .info .date {
+	font-size: 15px;
+	font-style: normal;
+}
+
+body.trac #content.milestone .info {
+	order: 1;
+}
+
+body.trac #content.milestone .description {
+	margin: 30px 0;
+	order: 2;
+}
+
+body.trac #content.milestone .trac-groupprogress {
+	order: 3;
+}
+
+body.trac #content.milestone #attachments {
+	order: 4;
+}
+
+body.trac #content.milestone .buttons {
+	order: 5;
+}
+
+body.trac #content.milestone #help {
+	order: 6;
+}
+
+body.trac table.progress,
+body.trac .trac-groupprogress,
+body.trac #stats {
+	background-color: transparent;
+	margin: 0;
+}
+
+body.trac .trac-groupprogress,
+body.trac #stats {
+	border: none;
+}
+
+body.trac #stats {
+	margin: 0 0 30px 0;
+	float: none;
+	width: auto;
+	max-width: none
+}
+
+body.trac .trac-groupprogress th,
+body.trac .trac-groupprogress td {
+	font-size: 15px;
 }
 
 body.trac table.progress td.open {
@@ -670,6 +770,7 @@ body.trac table.progress td.closed {
 	background: var(--bbbase-button-background-color);
 }
 
+
 /* Wiki */
 body.trac div.trac-content {
 	border: none;
@@ -679,11 +780,11 @@ body.trac div.trac-content {
 
 body.trac pre.wiki,
 body.trac pre.literal-block {
-    background: #ffe;
-    border: 1px solid #aa0;
-    box-shadow: 0 0 1em #eee;
+    background: var(--bbbase-message-background-color);
+    border: var(--bbbase-message-border);
+	border-radius: var(--bbbase-border-radius);
+    box-shadow: 0 0 1em var(--bbbase-wrapper-background-color);
 	font-size: 15px;
-    border-radius: var(--bbbase-border-radius);
     margin: 20px 0;
     padding: 15px 20px;
     overflow: auto;
@@ -703,7 +804,7 @@ body.trac .wikipage h2 {
 	padding: 15px 20px;
 	margin: 0;
 	border: none;
-	background-color: #eee;
+	background-color: var(--bbbase-wrapper-background-color);
 }
 
 body.trac .wikipage h3 {
@@ -711,7 +812,7 @@ body.trac .wikipage h3 {
 	padding: 15px 20px;
 	margin: 0;
 	border: none;
-	background-color: #fafafa;
+	background-color: var(--bbbase-light-header-background-color);
 }
 
 body.trac #pagepath {
@@ -733,7 +834,7 @@ body.trac .wikitoolbar a {
 body.trac .wikitoolbar a:hover,
 body.trac .wikitoolbar a:active {
 	text-decoration: none;
-	border: 1px solid #ccc;
+	border: var(--bbbase-wrapper-border);
 }
 
 body.trac #field-description-help,
@@ -813,10 +914,10 @@ body.trac div#ticket h2 .trac-type a {
 	font-weight: 200;
 	font-size: 12px;
 	padding: 6px 10px;
-	color: #999;
-	border: 1px solid #999;
+	color: var(--bbbase-light-text-color-low-contrast);
+	border: 1px solid var(--bbbase-light-text-color-low-contrast);
 	border-radius: 50px;
-	background-color: #eee;
+	background-color: var(--bbbase-wrapper-background-color);
 	margin-right: 8px;
 }
 
@@ -852,11 +953,11 @@ body.trac #properties label {
 }
 
 body.trac #ticket div.description h3 {
-    border-bottom: 1px solid #ddd;
-    color: #666;
-	font-size: 18px;
-	padding: 15px 0;
-	margin: 0 0 30px 0;
+    border: none;
+    color: var(--bbbase-darkest-text-color-low-contrast);
+	font-size: 20px;
+	padding: 25px 0 0 0;
+	margin: -10px 0 30px 0;
 	font-weight: 600;
 }
 
@@ -866,7 +967,7 @@ body.trac div#github-prs,
 body.trac div#trac-add-comment,
 body.trac div#ticketchange + div {
 	margin-bottom: 30px;
-	border: 1px solid #ccc;
+	border: var(--bbbase-wrapper-border);
 	border-radius: var(--bbbase-border-radius);
 	overflow: hidden;
 }
@@ -895,7 +996,7 @@ body.trac #content.ticket h3.foldable a {
 	display: block;
 	margin: 0;
 	padding: 10px;
-	background-color: #f0f0f0;
+	background-color: var(--bbbase-code-background-color);
 }
 
 body.trac #content.ticket div#github-prs + div.collapsed h3.foldable {
@@ -921,7 +1022,7 @@ body.trac #github-prs ul.pull-requests {
     padding: 0;
     position: relative;
 	border-collapse: collapse;
-	border: 1px solid #ccc;
+	border: var(--bbbase-wrapper-border);
 	width: calc(100% - 2px);
 }
 
@@ -930,7 +1031,7 @@ body.trac #github-prs ul.pull-requests li {
 }
 
 body.trac #github-prs ul.pull-requests li:not(:last-child) {
-	border-bottom: 1px solid #ccc;
+	border-bottom: var(--bbbase-wrapper-border);
 }
 
 body.trac #github-prs ul.pull-requests li div {
@@ -954,18 +1055,18 @@ body.trac #github-prs ul.pull-requests li > div:first-of-type > a:first-of-type 
 }
 
 body.trac #github-prs .button {
-    color: #fff;
+    color: var(--bbbase-brightest-white);
     white-space: nowrap;
 	font-size: 12px;
 	padding: 5px 8px;
-	background-color: #f0f0f0;
-	color: #aaa;
-	border: 1px solid #ccc;
+	background-color: var(--bbbase-code-background-color);
+	color: var(--bbbase-lightest-text-color-low-contrast);
+	border: var(--bbbase-wrapper-border);
 	border-radius: var(--bbbase-border-radius);
 }
 
 @media screen and (max-width: 820px) {
-	body.trac #github-prs ul.pull-requests li div:first-child {
+	body.trac #github-prs ul.pull-requests li:not(.loading) div:first-child {
 		padding-bottom: 0;
 	}
 }
@@ -987,21 +1088,25 @@ body.trac #changelog h3,
 body.trac #ticketchange h3 {
     border-bottom: 1px solid #d7d7d7;
     box-shadow: none;
-    padding: 10px 0;
+    padding: 10px;
     margin-bottom: 15px;
     font-size: 100%;
     font-weight: normal;
 }
 
 body.trac div#content.ticket #prefs {
-	border: 1px solid #ccc;
+	border: var(--bbbase-wrapper-border);
 	margin: 0;
-	background: #f0f0f0;
+	background: var(--bbbase-code-background-color);
 }
 
 body.trac div#content.ticket #prefs div {
 	display: block;
 	margin: 5px;
+}
+
+body.trac #content.ticket #ticketchange {
+	margin: 30px 0;
 }
 
 body.trac #trac-edit-warning {
@@ -1018,7 +1123,7 @@ body.trac #trac-add-comment #comment {
 }
 
 body.trac div#ticketchange + div {
-	background: #fafafa;
+	background: var(--bbbase-light-header-background-color);
 }
 
 body.trac #modify {
@@ -1087,8 +1192,45 @@ body.trac #content.browser #info .props {
     padding: 20px;
 	font-family: monospace;
 }
+
+body.trac #content.browser #info .props:first-child {
+	padding-top: 0;
+}
+
+body.trac #content.browser #info .props:last-child {
+	padding-bottom: 0;
+}
+
 body.trac #content.browser #info .props li:not(:last-of-type) {
 	margin-bottom: 20px;
+}
+
+body.trac #content.browser table.code th,
+body.trac #content.browser table.code td {
+	font: var(--bbbase-font-code);
+	padding: 3px;
+}
+
+body.trac #content.browser table.code th {
+	border-bottom: none;
+	user-select: none;
+	background-color: var(--bbbase-diff-loc-background-color);
+}
+
+body.trac #content.browser table.code thead th.content span.recover {
+	border: none;
+	background-color: transparent;
+	margin: 0;
+	padding: 0;
+}
+
+body.trac #content.browser table.code tbody tr:hover th {
+	background-color: #ddd; /* Not variable */
+}
+
+body.trac #content.browser table.code tbody tr:hover th :link,
+body.trac #content.browser table.code tbody tr:hover th :visited {
+	color: var(--bbbase-darkest-black);
 }
 
 /* Changeset */
@@ -1126,12 +1268,109 @@ body.trac #main #info td {
 
 body.trac #main #info tr:first-child th,
 body.trac #main #info tr:first-child td {
-	padding-bottom: 10px;
+	padding-bottom: 0;
 }
 
 body.trac #main #info tr:last-child th,
 body.trac #main #info tr:last-child td {
 	padding-top: 10px;
+}
+
+/* Diff */
+body.trac #content.changeset .diff .entries .entry {
+	padding: 0;
+	background-color: var(--bbbase-grey-background-color-low-contrast);
+}
+
+body.trac #content.changeset table.trac-diff tbody.skipped td,
+body.trac #content.changeset .diff table.trac-diff thead td {
+	background-color: var(--bbbase-grey-background-color-low-contrast);
+}
+
+body.trac #content.changeset .diff h2 {
+	margin: 15px;
+	padding: 0;
+	font-size: 16px;
+}
+
+body.trac #content.changeset .diff h2 .switch {
+	padding: 3px;
+	border-radius: 8px;
+	background: var(--bbbase-brightest-white);
+	border: var(--bbbase-wrapper-border);
+	line-height: 12px;
+	font-size: 12px;
+	margin: -6px -6px 0 0;
+	opacity: 0.7;
+}
+
+body.trac #content.changeset .diff h2 .switch:hover {
+	opacity: 1;
+}
+
+body.trac #content.changeset .diff h2 .switch span {
+	padding: 3px 5px;
+	margin: 0;
+	border: 1px solid transparent;
+	border-radius: 5px;
+	display: inline-block;
+	font-weight: 400;
+}
+
+body.trac #content.changeset .diff h2 .switch span.active {
+	background: var(--bbbase-wrapper-background-color);
+	border: var(--bbbase-wrapper-border);
+}
+
+body.trac #content.changeset .diff pre {
+	border-width: 1px 0 0 0;
+	padding: 20px;
+}
+
+body.trac #content.changeset .diff table.trac-diff {
+	border: none;
+	font: var(--bbbase-font-code);
+}
+
+body.trac #content.changeset .diff table.trac-diff td,
+body.trac #content.changeset .diff table.trac-diff th {
+	font: var(--bbbase-font-code);
+	padding: 3px;
+}
+
+body.trac #content.changeset .diff table.trac-diff th {
+	border: none;
+	text-align: center;
+	user-select: none;
+	background-color: var(--bbbase-diff-loc-background-color);
+}
+
+body.trac #content.changeset .diff table.trac-diff thead th {
+	border-bottom: 1px solid #d7d7d7;
+}
+
+body.trac #content.changeset .diff table.trac-diff tbody:not(.skipped) tr:hover td {
+	background-color: var(--bbbase-brightest-white);
+}
+
+body.trac #content.changeset .diff table.trac-diff tbody.skipped tr:hover td {
+	background-color: var(--bbbase-grey-background-color-low-contrast);
+}
+
+body.trac #content.changeset .diff table.trac-diff tbody:not(.unmod) tr:hover td.l {
+	background-color: #fdd; /* Not variable */
+}
+
+body.trac #content.changeset .diff table.trac-diff tbody:not(.unmod) tr:hover td.r {
+	background-color: #dfd; /* Not variable */
+}
+
+body.trac #content.changeset .diff table.trac-diff tbody.mod tr:hover td del {
+	background-color: #e99; /* Not variable */
+}
+
+body.trac #content.changeset .diff table.trac-diff tbody.mod tr:hover td ins {
+	background-color: #9e9; /* Not variable */
 }
 
 /* Admin */
@@ -1242,8 +1481,8 @@ body.trac .warning.system-message {
     padding: 30px;
     margin: 30px auto -30px;
 	font-size: 16px;
-    background-color: #ffe;
-    border-color: #e6db55;
+    background-color: var(--bbbase-message-background-color);
+    border: var(--bbbase-message-border);
     border-radius: var(--bbbase-border-radius);
 }
 
@@ -1259,7 +1498,7 @@ body.trac div.system-message .trac-close-msg {
 /* Footer */
 body.trac #footer {
 	width: 100%;
-	background-color: #f4f4f4;
+	background-color: var(--bbbase-light-background-color-low-contrast);
 	display: flex;
 	justify-content: center;
 	box-sizing: border-box;
@@ -1325,5 +1564,10 @@ body.trac #footer {
         position: relative;
         top: auto;
         margin-bottom: auto;
+    }
+}
+@media ( max-width: 960px ) {
+    #main {
+        overflow-x: initial;
     }
 }
