BuddyPress/bbPress Trac: Styling & HTTPS
* Bump Trac CSS version to `27`
* Add "https:" to stylesheet links
* Fix forums link in main nav for bbPress.org ("forums" vs. "support")

See: https://buddypress.trac.wordpress.org/ticket/9262

git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14360 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/trac.wordpress.org/templates/bbpress/wporg-header.html
+++ b/trac.wordpress.org/templates/bbpress/wporg-header.html
@@ -16,7 +16,7 @@
                 <li><a href="https://codex.bbpress.org/">Codex</a></li>
                 <li><a href="https://developer.bbpress.org">Develop</a></li>
                 <li class="current"><a href="https://bbpress.trac.wordpress.org">Make</a></li>
-                <li><a href="https://bbpress.org/support/">Forums</a></li>
+                <li><a href="https://bbpress.org/forums/">Forums</a></li>
                 <li><a href="https://bbpress.org/download/">Download</a></li>
             </ul>
 
