Trac: Flag `jonsurrell` as a Core Committer.
Fixes #7892


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14368 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/trac.wordpress.org/templates/core/site-specific.html
+++ b/trac.wordpress.org/templates/core/site-specific.html
@@ -112,6 +112,7 @@ var wpTracContributorLabels = {
 	tyxla:             'Core Committer',
 	wildworks:         'Core Committer',
 	jeremyfelt:        'Core Committer',
+	jonsurrell:        'Core Committer',
 
 	markjaquith:       'Lead Developer',
 	duck_:             'Emeritus Committer',
