Trac: Mark fabiankaegy as a committer.
git-svn-id: https://meta.svn.wordpress.org/sites/trunk@14379 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/trac.wordpress.org/templates/core/site-specific.html
+++ b/trac.wordpress.org/templates/core/site-specific.html
@@ -113,6 +113,7 @@ var wpTracContributorLabels = {
 	wildworks:         'Core Committer',
 	jeremyfelt:        'Core Committer',
 	jonsurrell:        'Core Committer',
+	fabiankaegy:       'Core Committer',
 
 	markjaquith:       'Lead Developer',
 	duck_:             'Emeritus Committer',
