--- a/trac.wordpress.org/templates/ticket_change.html
+++ b/trac.wordpress.org/templates/ticket_change.html
@@ -19,7 +19,7 @@ def wporg_wiki_to_html(context, wikidom, escape_newlines=None):
 	wikidom = re.sub( r'{{{\s*#!html', '{{{#!xml \n HTML', wikidom, flags=re.IGNORECASE )
 
 	# Unsupported code types get converted to plaintext.
-	wikidom = re.sub( r'{{{\s*#!(?!xml|php|js|javascript|sql|sh|table|tr|th|td|diff)(\S+)\s', '{{{#!default \n \\1', wikidom, flags=re.IGNORECASE )
+	wikidom = re.sub( r'{{{\s*#!(?!CommitTicketReference|xml|php|js|javascript|sql|sh|table|tr|th|td|diff)(\S+)\s', '{{{#!default \n \\1', wikidom, flags=re.IGNORECASE )
 
 	# Convert WikiMarkup.
 	wikidom = wiki_to_html( context, wikidom, escape_newlines)
