--- a/trac.wordpress.org/templates/ticket_change.html
+++ b/trac.wordpress.org/templates/ticket_change.html
@@ -15,11 +15,14 @@ Arguments:
 import re
 def wporg_wiki_to_html(context, wikidom, escape_newlines=None):
 
-	# Syntax highlight HTML blocks
+	# Syntax highlight HTML blocks.
 	wikidom = re.sub( r'{{{\s*#!html', '{{{#!xml \n HTML', wikidom, flags=re.IGNORECASE )
 
 	# Unsupported code types get converted to plaintext.
 	wikidom = re.sub( r'{{{\s*#!(?!CommitTicketReference|xml|php|js|javascript|sql|sh|table|tr|th|td|diff)(\S+)\s', '{{{#!default \n \\1', wikidom, flags=re.IGNORECASE )
+
+	# Long code blocks (20k+) should be truncated to 10k characters.
+	wikidom = re.sub( r'{{{(.{10000}?).{10000,}?(}}}|$)', '{{{\\1 \n\nWordPress.org: Please note that this content has been truncated for display.\n }}}', wikidom, flags=re.DOTALL )
 
 	# Convert WikiMarkup.
 	wikidom = wiki_to_html( context, wikidom, escape_newlines)
